Package_Tools/include-C/poppler/glib/poppler_form_field.h

/**
 * PopplerSignatureStatus
 * @POPPLER_SIGNATURE_VALID: signature is cryptographically valid
 * @POPPLER_SIGNATURE_INVALID: signature is cryptographically invalid
 * @POPPLER_SIGNATURE_DIGEST_MISMATCH: document content was changed after the signature was applied
 * @POPPLER_SIGNATURE_DECODING_ERROR: signature CMS/PKCS7 structure is malformed
 * @POPPLER_SIGNATURE_GENERIC_ERROR: failed to verify signature
 * @POPPLER_SIGNATURE_NOT_FOUND: requested signature is not present in the document
 * @POPPLER_SIGNATURE_NOT_VERIFIED: signature not yet verified
 *
 * Signature verification results
 *
 * Since: 21.12.0
 */
typedef enum
{
    POPPLER_SIGNATURE_VALID,
    POPPLER_SIGNATURE_INVALID,
    POPPLER_SIGNATURE_DIGEST_MISMATCH,
    POPPLER_SIGNATURE_DECODING_ERROR,
    POPPLER_SIGNATURE_GENERIC_ERROR,
    POPPLER_SIGNATURE_NOT_FOUND,
    POPPLER_SIGNATURE_NOT_VERIFIED
} PopplerSignatureStatus;
/**
 * PopplerCertificateStatus
 * @POPPLER_CERTIFICATE_TRUSTED: certificate is considered trusted
 * @POPPLER_CERTIFICATE_UNTRUSTED_ISSUER: the issuer of this certificate has been marked as untrusted by the user
 * @POPPLER_CERTIFICATE_UNKNOWN_ISSUER: this certificate trust chain has not finished in a trusted root certificate
 * @POPPLER_CERTIFICATE_REVOKED: certificate was revoked by the issuing certificate authority
 * @POPPLER_CERTIFICATE_EXPIRED: signing time is outside the validity bounds of this certificate
 * @POPPLER_CERTIFICATE_GENERIC_ERROR: failed to verify certificate
 * @POPPLER_CERTIFICATE_NOT_VERIFIED: certificate not yet verified
 *
 * Signature certificate verification results
 *
 * Since: 21.12.0
 */
typedef enum
{
    POPPLER_CERTIFICATE_TRUSTED,
    POPPLER_CERTIFICATE_UNTRUSTED_ISSUER,
    POPPLER_CERTIFICATE_UNKNOWN_ISSUER,
    POPPLER_CERTIFICATE_REVOKED,
    POPPLER_CERTIFICATE_EXPIRED,
    POPPLER_CERTIFICATE_GENERIC_ERROR,
    POPPLER_CERTIFICATE_NOT_VERIFIED
} PopplerCertificateStatus;
/**
 * PopplerSignatureValidationFlags
 * @POPPLER_SIGNATURE_VALIDATION_FLAG_VALIDATE_CERTIFICATE: Whether to validate also the certificate of the signature
 * @POPPLER_SIGNATURE_VALIDATION_FLAG_WITHOUT_OCSP_REVOCATION_CHECK: Whether to not do OCSP (Online Certificate Status Protocol) revocation check
 * @POPPLER_SIGNATURE_VALIDATION_FLAG_USE_AIA_CERTIFICATE_FETCH: Whether to use AIA (Authority Information Access) extension for certificate fetching
 *
 * Signature validation flags
 *
 * Since: 21.12.0
 */
typedef enum /*< flags >*/
{
    POPPLER_SIGNATURE_VALIDATION_FLAG_VALIDATE_CERTIFICATE = 1 << 0,
    POPPLER_SIGNATURE_VALIDATION_FLAG_WITHOUT_OCSP_REVOCATION_CHECK = 1 << 1,
    POPPLER_SIGNATURE_VALIDATION_FLAG_USE_AIA_CERTIFICATE_FETCH = 1 << 2,
} PopplerSignatureValidationFlags;
typedef enum
{
    POPPLER_FORM_FIELD_UNKNOWN,
    POPPLER_FORM_FIELD_BUTTON,
    POPPLER_FORM_FIELD_TEXT,
    POPPLER_FORM_FIELD_CHOICE,
    POPPLER_FORM_FIELD_SIGNATURE
} PopplerFormFieldType;
typedef enum
{
    POPPLER_FORM_BUTTON_PUSH,
    POPPLER_FORM_BUTTON_CHECK,
    POPPLER_FORM_BUTTON_RADIO
} PopplerFormButtonType;
typedef enum
{
    POPPLER_FORM_TEXT_NORMAL,
    POPPLER_FORM_TEXT_MULTILINE,
    POPPLER_FORM_TEXT_FILE_SELECT
} PopplerFormTextType;
typedef enum
{
    POPPLER_FORM_CHOICE_COMBO,
    POPPLER_FORM_CHOICE_LIST
} PopplerFormChoiceType;
/**
 * PopplerAdditionalActionType:
 * @POPPLER_ADDITIONAL_ACTION_FIELD_MODIFIED: The action to be performed when the user modifies the field.
 * @POPPLER_ADDITIONAL_ACTION_FORMAT_FIELD: The action to be performed before the field is formatted to
 * display its value.
 * @POPPLER_ADDITIONAL_ACTION_VALIDATE_FIELD: The action to be performed when the field value changes.
 * @POPPLER_ADDITIONAL_ACTION_CALCULATE_FIELD: The action to be performed when the field needs to be
 * recalculated.
 *
 * Form field additional action types to be passed to @poppler_form_field_get_additional_action
 *
 * Since: 0.72
 */
typedef enum
{
    POPPLER_ADDITIONAL_ACTION_FIELD_MODIFIED,
    POPPLER_ADDITIONAL_ACTION_FORMAT_FIELD,
    POPPLER_ADDITIONAL_ACTION_VALIDATE_FIELD,
    POPPLER_ADDITIONAL_ACTION_CALCULATE_FIELD
} PopplerAdditionalActionType;
extern
GType poppler_form_field_get_type(void) ;
extern
PopplerFormFieldType poppler_form_field_get_field_type(PopplerFormField *field);
extern
gint poppler_form_field_get_id(PopplerFormField *field);
extern
gdouble poppler_form_field_get_font_size(PopplerFormField *field);
extern
gboolean poppler_form_field_is_read_only(PopplerFormField *field);
extern
gchar *poppler_form_field_get_partial_name(PopplerFormField *field);
extern
gchar *poppler_form_field_get_mapping_name(PopplerFormField *field);
extern
gchar *poppler_form_field_get_name(PopplerFormField *field);
extern
PopplerAction *poppler_form_field_get_action(PopplerFormField *field);
extern
PopplerAction *poppler_form_field_get_additional_action(PopplerFormField *field, PopplerAdditionalActionType type);
extern
gchar *poppler_form_field_get_alternate_ui_name(PopplerFormField *field);
/* Button Field */
extern
PopplerFormButtonType poppler_form_field_button_get_button_type(PopplerFormField *field);
extern
gboolean poppler_form_field_button_get_state(PopplerFormField *field);
extern
void poppler_form_field_button_set_state(PopplerFormField *field, gboolean state);
/* Text Field */
extern
PopplerFormTextType poppler_form_field_text_get_text_type(PopplerFormField *field);
extern
gchar *poppler_form_field_text_get_text(PopplerFormField *field);
extern
void poppler_form_field_text_set_text(PopplerFormField *field, const gchar *text);
extern
gint poppler_form_field_text_get_max_len(PopplerFormField *field);
extern
gboolean poppler_form_field_text_do_spell_check(PopplerFormField *field);
extern
gboolean poppler_form_field_text_do_scroll(PopplerFormField *field);
extern
gboolean poppler_form_field_text_is_rich_text(PopplerFormField *field);
extern
gboolean poppler_form_field_text_is_password(PopplerFormField *field);
/* Choice Field */
extern
PopplerFormChoiceType poppler_form_field_choice_get_choice_type(PopplerFormField *field);
extern
gboolean poppler_form_field_choice_is_editable(PopplerFormField *field);
extern
gboolean poppler_form_field_choice_can_select_multiple(PopplerFormField *field);
extern
gboolean poppler_form_field_choice_do_spell_check(PopplerFormField *field);
extern
gboolean poppler_form_field_choice_commit_on_change(PopplerFormField *field);
extern
gint poppler_form_field_choice_get_n_items(PopplerFormField *field);
extern
gchar *poppler_form_field_choice_get_item(PopplerFormField *field, gint index);
extern
gboolean poppler_form_field_choice_is_item_selected(PopplerFormField *field, gint index);
extern
void poppler_form_field_choice_select_item(PopplerFormField *field, gint index);
extern
void poppler_form_field_choice_unselect_all(PopplerFormField *field);
extern
void poppler_form_field_choice_toggle_item(PopplerFormField *field, gint index);
extern
void poppler_form_field_choice_set_text(PopplerFormField *field, const gchar *text);
extern
gchar *poppler_form_field_choice_get_text(PopplerFormField *field);
extern
PopplerSignatureInfo *poppler_form_field_signature_validate_sync(PopplerFormField *field, PopplerSignatureValidationFlags flags, GCancellable *cancellable, GError **error);
extern
void poppler_form_field_signature_validate_async(PopplerFormField *field, PopplerSignatureValidationFlags flags, GCancellable *cancellable, GAsyncReadyCallback callback, gpointer user_data);
extern
PopplerSignatureInfo *poppler_form_field_signature_validate_finish(PopplerFormField *field, GAsyncResult *result, GError **error);
/* Signature Field */
#define POPPLER_TYPE_SIGNATURE_INFO (poppler_signature_info_get_type())
extern
GType poppler_signature_info_get_type(void) ;
extern
PopplerSignatureInfo *poppler_signature_info_copy(const PopplerSignatureInfo *siginfo);
extern
void poppler_signature_info_free(PopplerSignatureInfo *siginfo);
extern
PopplerSignatureStatus poppler_signature_info_get_signature_status(const PopplerSignatureInfo *siginfo);
extern
PopplerCertificateStatus poppler_signature_info_get_certificate_status(const PopplerSignatureInfo *siginfo);
extern
PopplerCertificateInfo *poppler_signature_info_get_certificate_info(const PopplerSignatureInfo *siginfo);
extern
const gchar *poppler_signature_info_get_signer_name(const PopplerSignatureInfo *siginfo);
extern
GDateTime *poppler_signature_info_get_local_signing_time(const PopplerSignatureInfo *siginfo);
/* Signing Data */
#define POPPLER_TYPE_SIGNING_DATA (poppler_signing_data_get_type())